# mobot

./: .envrc  .gitignore  README.md  buttons.py  display.py  display2.py  display3.py  display_key.py  display_pixel.py  gimbal.py  gimbal2.py  main.py  output.csv  pyproject.toml  requirements.txt  servo.py  sonar.py  sonar2.py  sonar3.py  sonar4.py  sonar5.py  test_buttons.py  video.py
plot/: cartesian.gp  theta.gp
static/: control.js  index.html  style.css
