[project]
name = "mobot"
version = "0.1.0"
description = "Calvin's mobile robot software"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpiozero",
    "luma-core>=2.5.3",
    "luma-lcd>=2.13.0",
    "luma-oled>=3.15.0",
    "pillow>=12.1.1",
    "rpi-gpio>=0.7.1",
    "sparkfun-pi-servo-hat",
    "spidev>=3.8",
]

[project.optional-dependencies]
rpi = ["RPi.GPIO"]
# lgpio
# RPi.GPIO
# adafruit-circuitpython-pca9685
# smbus
# smbus2

# [project.scripts]
# mobot-cli = "mobot"
